fix bottom margin spacing on desktop, 20% to 3rem

--- a/src/App.scss
+++ b/src/App.scss
@@ -276,7 +276,7 @@ hr {
 html, body {
 
   background-color: #f8f8f8;
-  margin-bottom: 20%;
+  margin-bottom: 3rem;
   overflow-x: hidden;
 }
 
